# openapi/p4pa-analytics-data-processing.openapi.yaml
@@ -4,33 +4,180 @@ info:
   description: Api and Models
   version: 0.0.1
 paths:
-  /api/v1/greet:
+  /workflows/{workflowId}/status:
     get:
-      summary: "Hello World"
-      description: "Sample endpoint that return greetings"
+      tags:
+        - Workflow
+      operationId: getWorkflowStatus
+      summary: Get Workflow Status
+      description: Retrieve the current status of a Temporal workflow by its ID.
+      parameters:
+        - name: workflowId
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
-          description: "Success"
+          description: "Workflow status retrieved successfully"
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: "Hello, World!"
+                $ref: '#/components/schemas/WorkflowStatusDTO'
+        '404':
+          description: "Workflow not found"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDTO'
         '500':
-          description: "Internal Server Error"
+          description: Server Error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Internal Server Error"
+                $ref: '#/components/schemas/ErrorDTO'
+  /schedules/{scheduleId}/info:
+    get:
+      tags:
+        - Schedule
+      operationId: getScheduleInfo
+      summary: Get Schedule info
+      description: Retrieve the info of a Temporal schedule by its ID.
+      parameters:
+        - name: scheduleId
+          in: path
+          required: true
+          schema:
+            type: 'ScheduleEnum'
+      responses:
+        '200':
+          description: "Workflow status retrieved successfully"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ScheduleInfoDTO'
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDTO'
+security:
+  - BearerAuth: [ ]
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
   schemas:
+    WorkflowCreatedDTO:
+      type: object
+      required:
+        - workflowId
+        - runId
+      properties:
+        workflowId:
+          type: string
+        runId:
+          type: string
+    WorkflowStatusDTO:
+      type: object
+      required:
+        - workflowId
+        - workflowType
+        - status
+        - runId
+        - taskQueue
+      properties:
+        workflowId:
+          type: string
+        workflowType:
+          type: string
+        status:
+          type: 'WorkflowExecutionStatus'
+        runId:
+          type: string
+        taskQueue:
+          type: string
+        startDateTime:
+          type: string
+          format: date-time
+        executionDateTime:
+          type: string
+          format: date-time
+        endDateTime:
+          type: string
+          format: date-time
+        duration:
+          type: string
+          format: duration
+    ScheduleInfoDTO:
+      type: object
+      required:
+        - scheduleId
+        - numActions
+        - numActionsMissedCatchupWindow
+        - numActionsSkippedOverlap
+        - runningActions
+        - recentActions
+        - nextActionTimes
+        - createdAt
+        - lastUpdatedAt
+      properties:
+        scheduleId:
+          type: 'ScheduleEnum'
+        numActions:
+          type: integer
+          format: int64
+        numActionsMissedCatchupWindow:
+          type: integer
+          format: int64
+        numActionsSkippedOverlap:
+          type: integer
+          format: int64
+        runningActions:
+          type: array
+          items:
+            $ref: '#/components/schemas/ScheduleExecutionInfoDTO'
+        recentActions:
+          type: array
+          items:
+            $ref: '#/components/schemas/RecentScheduleExecutionInfoDTO'
+        nextActionTimes:
+          type: array
+          items:
+            type: string
+            format: date-time
+        createdAt:
+          type: string
+          format: date-time
+        lastUpdatedAt:
+          type: string
+          format: date-time
+    ScheduleExecutionInfoDTO:
+      type: object
+      required:
+        - workflowId
+        - runId
+      properties:
+        workflowId:
+          type: string
+        runId:
+          type: string
+    RecentScheduleExecutionInfoDTO:
+      allOf:
+        - $ref: "#/components/schemas/ScheduleExecutionInfoDTO"
+        - type: object
+          required:
+            - scheduledAt
+            - startedAt
+          properties:
+            scheduledAt:
+              type: string
+              format: date-time
+            startedAt:
+              type: string
+              format: date-time
     ErrorDTO:
       type: object
       required:
@@ -43,5 +190,6 @@ components:
             - NOT_FOUND
             - BAD_REQUEST
             - GENERIC_ERROR
+            - CONFLICT
         message:
           type: string
